# ska-sdp-etcd

./: .git-blame-ignore-revs  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENCE  Makefile  README.md  pyproject.toml
docs/: requirements.txt
docs/src/: conf.py  index.rst  processing_controller.rst  ska-sdp-etcd.rst
