[tool.poetry]
name = "ska-sdp-etcd"
version = "3.5.12"
description = "SKA SDP etcd Image"
authors = ["SKA SDP Developers"]
license = "BSB-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-etcd"
documentation = "https://developer.skao.int/projects/ska-sdp-etcd/en/latest/"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
ska-ser-sphinx-theme = "^0.1.3"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
