[tool.poetry]
name = "ska-sdp-etcd"
version = "3.5.15"
description = "SKA SDP etcd Image"
authors = ["SKA SDP Developers"]
license = "BSB-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-etcd"
documentation = "https://developer.skao.int/projects/ska-sdp-etcd/en/latest/"
package-mode = false

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
